[build-system]
requires = ["setuptools>=42", "wheel", "cmake>=3.24", "ninja", "pybind11>=2.10.0"]
build-backend = "setuptools.build_meta"

[project]
name = "containerpy"
version = "0.1.0"
description = "Container management library"
authors = [{name = "Ahmed Aredah", email = "AhmedAredah@vt.edu"}]
license = {file = "LICENSE"}
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "PyQt6>=6.0"
]
dynamic = ["keywords", "classifiers"]

[project.urls]
Homepage = "https://github.com/AhmedAredah/container"
Documentation = "https://container.readthedocs.io/"
Repository = "https://github.com/AhmedAredah/container.git"

[tool.setuptools]
package-dir = {"" = "python"}
packages = ["containerpy"]